# kanakku

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOMAIN_CONFIGURATION_SUMMARY.md  LICENSE  MONITORING_DASHBOARD_IMPLEMENTATION.md  PRODUCTION_CHECKLIST.md  README.md  banktransactions.service  docker-compose.yml  journal.ledger  kanakku-admin-server.service  kanakku-dashboard.service  kanakku-mcp-server.service  kanakku-monitor.service  kanakku-scheduler.service  kanakku-worker.service  kanakku.service  lint.sh  nginx-kanakku.conf  pyproject.toml  requirements.txt  test.sh
.cursor/: keybindings.json  settings.json  tasks.json
.cursor/rules/: api_design.mdc  backend.mdc  code_quality.mdc  cursor_rules.mdc  debugging.mdc  dependency_management.mdc  deployment.mdc  dev_workflow.mdc  frontend.mdc  generic.mdc  git_workflow.mdc  markdown.mdc  project_management.mdc  security.mdc  self_improve.mdc  taskmaster.mdc  testing.mdc  version_control.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  lint-black.yml  lint-ruff.yml  performance.yml  release.yml  security.yml  test-backend.yml  test-frontend.yml  verify-rules-sync.yml
.plan/: BLUEPRINT_MIGRATION_PLAN.md  README.md  TODO.md  monitoring-dashboard-implementation-plan.md  monitoring-dashboard-quick-start.md  monorepo-build-consolidation-plan.md  shared-database-utilities-plan.md  unified-service-layer-plan.md
.windsurf/rules/: _template.yml  api_design.yml  backend.yml  code_quality.yml  cursor_rules.yml  deployment.yml  frontend.yml  index.yml  security.yml  testing.yml
adminserver/: AUTHENTICATION.md  DEBUG_LOGGING.md  QUICKSTART.md  README.md  SECURITY.md  SERVICE_MANAGEMENT.md  admin_server.py  auth.py  cursor-mcp-config.json  deploy-production.sh  manage_users.py  requirements.txt  setup.sh  setup_auth.py  test-connection.py  test_imports.py  web_dashboard.py
adminserver/config/: dashboard.htpasswd  dashboard_config.py
adminserver/templates/: base.html  dashboard.html  login.html
backend/: .gitignore  Dockerfile  LOGGING_IMPROVEMENTS.md  README.md  __init__.py  app.py  config.py  create_tables.py  deploy-production.sh  init_db.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run-backend.sh  setup_test_db.py  swagger-readme.md  swagger.yaml
backend/app/: __init__.py  accounts.py  api.py  app.db  auth.py  books.py  config.py  email_automation.py  email_processor.py  errors.py  extensions.py  ledger.py  mappings.py  models.py  preamble.py  reports.py  settings.py  swagger.py  transactions.py  utils.py
backend/docs/: improvements.md  logging.md
backend/examples/: config_demo.py
backend/tests/: __init__.py  conftest.py  test_accounts.py  test_api.py  test_api_enhanced.py  test_api_extended.py  test_api_tokens.py  test_app_init.py  test_auth.py  test_auth_with_books.py  test_book_integration.py  test_books.py  test_config.py  test_config_manager.py  test_encryption.py  (+17 more)
banktransactions/: .gitignore  README.md  __init__.py  api_client.py  config.toml  config_reader.py  email_parser.py  example_gemini.py  imap_client.py  main.py  migrate_config.py  notes.md  processed_ids.py  processed_ids_db.py  requirements.txt  sample_email.eml  test_api.py  test_api_client.py  test_bank_email_reader.py  test_config_reader.py  test_email.eml  test_email2.eml  test_parser.py  test_processed_ids.py  test_transaction_data.py  transaction_data.py
docs/: ARCHITECTURE.md  ARCHITECTURE_MIGRATION.md  CI_CD_OPTIMIZATION.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_SETUP.md  GEMINI_API_SETUP.md  MIGRATION_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  account-autocomplete-feature.md  api_documentation.md  architecture_diagrams.md  banktransactions_service_install.md  deployment-domain-setup.md  deployment-quick-start.md  deployment.md  error-handling-best-practices.md  executable-scripts.md  faq.md  gmail-message-ids-database-migration.md  hcaptcha-setup.md  quick_start_guide.md  rate-limit-configuration.md  redis-queue-debugging.md  redis-queue-quick-reference.md  user_manual.md
fixes/: active_book_deletion_test_fix.md  authenticated-client-infinite-recursion-fix.md  backend-import-path-fix.md  bcrypt-passlib-compatibility-fix.md  ci-build-marshmallow-dependency.md  currency-refactoring-usd-to-inr.md  deployment-circular-import-fix.md  deployment-migration-circular-import-fix.md  email-automation-session-pickling-error.md  email-automation-test-failures-fix.md  flask-jwt-extended-422-errors.md  github-actions-performance-test-failures.md  gitleaks-false-positives-fix.md  implementing-csrf-protection.md  import-strategy-improvements.md  mcp-server-systemd-deployment.md  phase2-auth-blueprint-migration.md  postgresql-full-text-search-implementation.md  postgresql-tsquery-special-characters-fix.md  rate-limiting-implementation.md  redis-connection-double-prefix-fix.md  refactoring-duplicate-code-removal.md  shared-database-utilities-implementation.md  test-fixes-timezone-import.md  token_expiration_fix.md  transaction_update_with_postings_fix.md  webpack-definePlugin-conflict.md
frontend/: .gitignore  .stylelintrc.json  CLAUDE.md  Dockerfile  README.md  build-production.sh  craco.config.js  package-lock.json  package.json  patch-util-extend.js  patch-util-module.js  playwright.config.js  webpack-fallbacks.js
hack/: debug_redis_queue.py  health_check.sh  inspect_queues.py  sync_rules.py
kanakku.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ledgertransactions/: README.md  main.go
mcp-server/: QUICKSTART.md  README.md  SECURITY.md  SERVICE_MANAGEMENT.md  admin_server.py  cursor-mcp-config.json  deploy-production.sh  kanakku_logs_server.py  setup.sh  test-connection.py
scripts/: README.md  admin-server-helper.sh  check_migration.py  create-htpasswd.sh  health_check.sh  mcp-server-helper.sh  server-setup.sh  update-env.sh
shared/: __init__.py  database.py  imports.py  test_database.py  test_services.py
src/: App.js
tools/accountimporter/: Cargo.toml  README.md
tools/accountimporter/src/: main.rs
(+216 files in other folders)
