[package]
name = "accountimporter"
version = "0.1.0"
edition = "2021"
description = "A tool to parse accounts from ledger files and create them in Kanakku"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
 
[dev-dependencies]
mockito = "0.30" 